# Soccer

./: .clang_complete  .gcc-flags.json  .gitignore  .gitmodules  CMakeLists.txt  Main  README.md  init.sh  main.cpp  platformio.ini  upload.sh
Backup Soccer/: CMakeLists.txt
Librerie Utili/Adafruit_Unified_Sensor/: Adafruit_Sensor.h
Librerie Utili/Pixy2/: Pixy2.h
Programmazione/include/: globals.h
Programmazione/src/: main.ino  mors_compass.ino  mors_drive.ino  mors_joints.ino  mors_lines.ino  mors_pin.ino  mors_pixy.ino
Programmi Robot ICARO/The_Best_Soccer/: The_Best_Soccer.ino  mors_drive.cpp  mors_drive.h  mors_globals.cpp  mors_joints.cpp  (+1 more)
The_Best_Soccer/: The_Best_Soccer.ino  mors_compass.cpp  mors_compass.h  mors_drive.cpp  mors_drive.h  mors_drive.ino  mors_globals.h  mors_imu.ino  mors_joints.cpp  mors_joints.h  mors_joints.ino  mors_libras.h  mors_lines.ino  mors_params.h  mors_pixy.ino
include/: PID_controller.hpp  components.hpp  components_handler.hpp  components_obj.hpp  config.hpp  drive.hpp  globals.hpp  imu.hpp  joints.hpp  line.hpp  line_handler.hpp  pixy.hpp  pixyHandler.hpp  pixy_handler.hpp
lib/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/Imu/: mors_imuHandler.hpp
libraries/Joint/: mors_drive.hpp
libraries/Pid/: mors_pid.cpp
libs/: CMakeLists.txt
main/: drive.ino  imu.ino  joints.ino  lines.ino  main.ino  pixy.ino
programs/: CMakeLists.txt  globals.hpp
prova/: linee.ino  prova.ino
scripts/: upload.sh
src/: CMakeLists.txt  PID_controller.cpp  __globals.cpp  __globals.hpp  components.cpp  components_handler.cpp  components_obj.cpp  drive.cpp  globals.cpp  globals.hpp  imu.cpp  joints.cpp  line.cpp  line_handler.cpp  main.cpp  main.ino  mors_compass.ino  mors_drive.ino  mors_joints.ino  mors_lines.ino  mors_main.ino  mors_pin.ino  pixy.cpp  pixyHandler.cpp  pixy_handler.cpp
src/libraries/: CMakeLists.txt
src/libraries/Pid/: mors_pid.cpp
src/libraries/Pixy/: mors_pixyHandler.hpp
src/libraries/Planner/: mors_planner.hpp
src/programs/: CMakeLists.txt
(+96 files in other folders)
